phpmyadmin/phpmyadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
spec:
  ingressClassName: nginx
  rules:
  - host: phpmyadmin.browser
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: phpmyadmin
              port: 
                number: 80
